--- a/APClient/src/view/Login.form
+++ b/APClient/src/view/Login.form
@@ -161,6 +161,9 @@
               <Border info="null"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfUsernameKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="tfPassword">
           <Properties>
@@ -174,6 +177,9 @@
               <Border info="null"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfPasswordKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btLogin">
           <Properties>
@@ -247,6 +253,9 @@
             </Property>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cbServersKeyPressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
