Structure Fix client

--- a/APClient/src/view/ChangePassword.form
+++ b/APClient/src/view/ChangePassword.form
@@ -55,15 +55,15 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblOldPassword2" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblOldPassword1" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="lblNewPassword" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblNewPassword1" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblOldPassword" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblNewPassword2" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="tfNewPassword" max="32767" attributes="0"/>
-                              <Component id="tfOldPassword1" max="32767" attributes="0"/>
-                              <Component id="tfOldPassword2" max="32767" attributes="0"/>
+                              <Component id="tfNewPassword2" max="32767" attributes="0"/>
+                              <Component id="tfOldPassword" max="32767" attributes="0"/>
+                              <Component id="tfNewPassword1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -76,18 +76,18 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="tfOldPassword1" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="lblOldPassword1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="tfOldPassword" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="lblOldPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="tfOldPassword2" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="lblOldPassword2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="tfNewPassword1" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="lblNewPassword1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="tfNewPassword" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
-                      <Component id="lblNewPassword" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="tfNewPassword2" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                      <Component id="lblNewPassword2" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -100,7 +100,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="lblOldPassword1">
+        <Component class="javax.swing.JLabel" name="lblOldPassword">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="11" style="1"/>
@@ -111,7 +111,7 @@
             <Property name="text" type="java.lang.String" value="Typ password"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="tfOldPassword1">
+        <Component class="javax.swing.JPasswordField" name="tfOldPassword">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="66" green="66" red="66" type="rgb"/>
@@ -124,10 +124,10 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfOldPassword1KeyPressed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfOldPasswordKeyPressed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="tfOldPassword2">
+        <Component class="javax.swing.JPasswordField" name="tfNewPassword1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="66" green="66" red="66" type="rgb"/>
@@ -140,10 +140,10 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfOldPassword2KeyPressed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfNewPassword1KeyPressed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblOldPassword2">
+        <Component class="javax.swing.JLabel" name="lblNewPassword1">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="11" style="1"/>
@@ -151,10 +151,10 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="7f" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Retyp old password"/>
+            <Property name="text" type="java.lang.String" value="Typ new password"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="tfNewPassword">
+        <Component class="javax.swing.JPasswordField" name="tfNewPassword2">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="66" green="66" red="66" type="rgb"/>
@@ -167,10 +167,10 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfNewPasswordKeyPressed"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfNewPassword2KeyPressed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblNewPassword">
+        <Component class="javax.swing.JLabel" name="lblNewPassword2">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="11" style="1"/>
